--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ font-family: 'Open Sans', sans-serif; */
     display: flex;
     flex-direction: column;
     padding: 3px 200px;
-    height: 400px;
+    height: 433px;
     justify-content: center;
     align-items: center;
 }
@@ -90,7 +90,7 @@ font-family: 'Open Sans', sans-serif; */
     background-size: center/cover;
     position: absolute;
     width: 100%;
-    height: 80%;
+    height: 100%;
     top: 0px;
     left: 0px;
     z-index: -1;
@@ -111,6 +111,7 @@ font-family: 'Open Sans', sans-serif; */
 }
 
 /* Services Section */
+
 #services{
     margin: 34px;
     display: flex;
@@ -130,16 +131,52 @@ font-family: 'Open Sans', sans-serif; */
     margin: auto;
 }
 
-#services{}
+#services .box p{
+    font-family: 'Open Sans', sans-serif;
+}
 
+/* Client-section */
+#client-section{
+    height: 344px;
+    position: relative;
+}
+
+#client-section::before{
+    content: '';
+    position: absolute;
+    background: rgba(0, 0, 0, 0.3) url('../images/bg1.jpg');
+    background-blend-mode: darken;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.75;
+}
+
+#clients{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#clients img{
+    height: 124px;
+}
+
+.client-item{
+    padding: 34px;
+}
 /* Utility classes */
 .h-primary{
+    font-family: 'Open Sans', sans-serif;
     font-size: 3.8rem;
     padding: 12px;
 }
 
 .h-primary{
-    font-size: 2.8rem;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2.3rem;
     padding: 12px;
 }
 
