--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ font-family: 'Open Sans', sans-serif; */
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: 0.85;
+    opacity: 0.3;
 }
 
 #clients{
@@ -166,6 +166,21 @@ font-family: 'Open Sans', sans-serif; */
 
 .client-item{
     padding: 15px;
+}
+
+/* Contact Section */
+#contact{
+    position: relative;
+}
+
+#contact::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.7;
+    background: url('../images/contact.jpg') no-repeat center center/cover;
 }
 /* Utility classes */
 .h-primary{
