--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,10 @@ font-family: 'Open Sans', sans-serif; */
 #services .box{
     border: 2px solid brown;
     padding: 34px;
-    margin: 3px 6px;
+    margin: 2px 20px;
     border-radius: 23px;
     background-color: #f4f3f2;
+    margin-bottom: 20px;
 }
 
 #services .box img{
@@ -181,6 +182,36 @@ font-family: 'Open Sans', sans-serif; */
     z-index: -1;
     opacity: 0.7;
     background: url('../images/contact.jpg') no-repeat center center/cover;
+}
+
+#contact-box{
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+}
+
+#contact-box input, textarea{
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 7px;
+    font-size: 1.1rem;
+}
+
+#contact-box form{
+    width: 40%;
+}
+
+#contact-box label{
+    font-size: 1.3 rem;
+    font-family: 'Open Sans', sans-serif;
+}
+
+footer{
+    background: black;
+    color: white;
+    padding: 9px 20px;
+    /* font-weight: 100; */
 }
 /* Utility classes */
 .h-primary{
