made home and navbar responsive

--- a/css/phone.css
+++ b/css/phone.css
@@ -1,24 +1,57 @@
-/* Navigation */
-#nav{
+body{
+    background-color: red;
+}
 
+/* Navigation */
+#navbar{
+    flex-direction: column;
+}
+
+#navbar ul li a{
+    font-size: 1rem;
+    padding: 0px 7px;
+    padding-bottom: 8px;
 }
 
 /* Home Section */
 #home{
+    height: 370px;
+    padding: 27px 200px;
+}
 
+#home::before{
+    height: 480px;
+}
+
+#home p{
+    font-size: 16px;
 }
 
 /* Services Section */
 #services{
+    flex-direction: column;
+}
 
+#services .box{
+    
 }
 
 /* Client Section */
 #clients{
-
+    overflow: hidden;
 }
 
 /* Contact Us Section */
 
 
 /* Footer Section */
+
+/* Utility classes */
+.h-primary{
+    font-size: 26px;
+}
+
+.btn{
+    font-size: 13px;
+    padding: 4px 8px;
+}
