--- a/css/phone.css
+++ b/css/phone.css
@@ -33,16 +33,27 @@ body{
 }
 
 #services .box{
-    
+    padding: 14px;
+    margin: 2px 0;
+    margin-bottom: 20px;
 }
 
 /* Client Section */
 #clients{
-    overflow: hidden;
+    flex-wrap: wrap;
+}
+
+#clients img{
+    width: 66px;
+    padding: 2px 6px;
+    height: auto;
 }
 
 /* Contact Us Section */
 
+#contact-box form{
+    width: 80%;
+}
 
 /* Footer Section */
 
