--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ html{
 #navbar{
     display: flex;
     align-items: center;
-    position: relative;
+    position: sticky;
     top: 0px;
 }
 
@@ -48,7 +48,7 @@ html{
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: 0.4;
+    opacity: 0.6;
 }
 
 #navbar ul{
@@ -88,7 +88,7 @@ html{
 #home::before{
     content: '';
     background: rgba(0, 0, 0, 0.3) url(../images/bg.jpg);
-    background-blend-mode: darken;
+    background-blend-mode: overlay;
     background-repeat: no-repeat;
     background-position: center;
     background-size: center/cover;
@@ -98,7 +98,7 @@ html{
     top: 0px;
     left: 0px;
     z-index: -1;
-    opacity: 0.89;
+    opacity: 0.90;
 }
 
 #home h1{
